Awareness API Include

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">HealthyLifeApp</string>
     <string name="facebook_app_id">1683242371719364</string>
     <string name="buttonHistoryText">Show Walking History</string>
+    <string name="google_play_services_key">AIzaSyCZXrOMibj--q42jq8eefHzuthiT5rUrEM</string>
+   <!-- <string name="google_play_services_key">AIzaSyAUnx1zKxpqV_uSfa6w0VMl_1D3Mx3amTQ</string>-->
 </resources>
