--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">HealthyLifeApp</string>
     <string name="facebook_app_id">1683242371719364</string>
     <string name="buttonHistoryText">Show Walking History</string>
+    <string name="historyTitle">Walking History in past 7 days</string>
 </resources>
