--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="firebase_status_fmt">Firebase User: %s</string>
     <string name="firebase_user_management">Firebase User Management</string>
     <string name="title_activity_configure_profile">ConfigureProfile</string>
+
+    <string name="button_showcalendar_text">Calendar</string>
 </resources>
