-added some methods to FirebaseUtility (calculate age, calculate part of the day, saveproperty to firebase)                                                                              -added "sleep" attribute to firebase database                                                                                   -think I managed to calculate time of sleep and save it to firebase, but we will see that tonight  -saving age and totalStillTime in global propertyes of SensorService

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,7 @@
     <string name="title_activity_configure_profile">ConfigureProfile</string>
 
     <string name="button_showcalendar_text">Calendar</string>
+
+    <string name="snooze">Snooze</string>
+    <string name="accept_action">Accept</string>
 </resources>
